--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "homepage": "https://github.com/marcelloprado/quiz-com-react",
-  
   "name": "quiz",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/marcelloprado.github.io/quiz-com-react",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
